syntax = "proto3";

package kitanoyoru.gigaservices.db;

option go_package = "github.com/kitanoyoru/gigaservices/apps/db/proto";

import "platform/db/pkg/proto/customer.proto";
import "platform/db/pkg/proto/item.proto";

service DatabaseService {
	// Customer API
	rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
	rpc GetCustomerById(GetCustomerByIdRequest) returns (GetCustomerByIdResponse);
	rpc GetCustomerByEmail(GetCustomerByEmailRequest) returns (GetCustomerByEmailResponse);
	rpc ListCustomers(ListCustomersRequest) returns (ListCustomersResponse);
	// Item API
	rpc CreateItem(CreateItemRequest) returns (CreateItemResponse);
	rpc GetItemById(GetItemByIdRequest) returns (GetItemByIdResponse);
	rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
}
